# pyeventio

./: .gitignore  .ignore  .travis.yml  LICENSE.txt  MANIFEST.in  README  README.md  README.rst  download_test_files.sh  foo.py  p_file.py  plt3D.py  pyproject.toml  setup.cfg  setup.py  test_it.py  try_simtelfile.py
.github/workflows/: ci.yml  deploy.yml
.travis/: install.sh
eventio/: __init__.py  _eventio.py  base.py  bits.py  bits.pyx  constants.py  event_io_file.py  exceptions.py  file_types.py  files.py  header.py  header.pyx  histograms.py  iact.py  object_header.py  objects.py  photonbunches.py  search_utils.py  tools.py  var_int.pyx  version_handling.py
eventio/_dev_version/: __init__.py
eventio/file/: __init__.py
eventio/iact/: __init__.py  exceptions.py  objects.py  parse_corsika_data.py  photonbunches.py
eventio/iact/tests/: test_corsika_conversion.py  test_iact_file.py  test_iact_objects.py
eventio/scripts/: cut_eventio_file.py  plot_hists.py  print_object_information.py  print_simtel_history.py  print_simtel_metaparams.py  print_structure.py
eventio/simtel/: __init__.py  camorgan.pyx  mc_runheader_dtypes.py  objects.py  parsing.pyx  pixelset.py  runheader_dtypes.py  simtel_runheader_dtypes.py  simtelfile.py
eventio/simtel/tests/: test_assert_version.py  test_compare_hessio.py  test_simtel_objects.py  test_simtel_types.py  test_simtelfile.py
eventio/test/: test_open_file.py
eventio/tests/: test_bits.py  test_check_type.py  test_constants.py  test_file_recognition.py  test_histograms.py  test_iact.py  test_it.py  test_low_level.py  test_objects.py  test_open_file.py  test_scripts.py  test_search_utils.py  test_simtelfile.py  test_tools.py
examples/: export_pyhessio.py  get_all_object_versions.py  iter_mc_events.py  plot_astri.py  plot_events.py  plot_hists.py  plot_light_on_ground.py  plot_light_on_ground_by_particle.py  plot_light_on_ground_rgb.py  plot_mc_pe.py  plot_photon_density_vs_r.py  plot_production_3d.py  print_structure.py  profile_simtel.py  read_all_objects.py  read_simtel_corsika_events.py  trigger_times.py  try_simtelfile.py
hessioxxx-20181107/: eventio.c  io_hess.c  io_hess.h  io_histogram.c  io_histogram.h  io_simtel.c
src/eventio/: __init__.py  _version.py  base.py  constants.py  exceptions.py  file_types.py  header.pyx  histograms.py  search_utils.py  tools.py  var_int.pyx  version.py
tests/: test_assert_version.py  test_bits.py  test_check_type.py  test_constants.py  test_file_recognition.py  test_header.py  test_histograms.py  test_iterator.py  test_objects.py  test_open_file.py  test_scripts.py  test_search_utils.py  test_tools.py
tests/iact/: test_iact_file.py  test_iact_objects.py
tests/resources/: 40k_pixels.simtel.zst  5_gamma_2_telescopes_reuse_2_split_always.zst  5_gamma_2_telescopes_split_always.zst  aux_traces_2029.simtel.zst  aux_traces_2030.simtel.zst  calib_true_pe.simtel.zst  camsettings_v6.simtel.zst  extracted_pedestals.simtel.zst  gamma_100gev_1216.eventio  gamma_prod6_tel_event_header_v4.simtel.zst  gamma_test.simtel_event1_tel_id_38_adc_samples.npy  gamma_test_mc_shower.npy  gamma_with_obslevel_particles.simtel.zst  history_meta_75.simtel.zst  input_card.txt  lst_muons_with_true_photons.simtel.zst  lst_with_photons.simtel.zst  two_telescopes_inputcard.txt
tests/simtel/: test_compare_hessio.py  test_simtel_objects.py  test_simtelfile.py  test_telescope_ids.py  test_zero_suppression.py
(+9 files in other folders)
