[metadata]

name = eventio
description = Python read-only implementation of the EventIO file format
author = Dominik Neise, Maximilian Noethe
author_email = maximilian.noethe@tu-dortmund.de
license = MIT

long-description = file: README.rst
long_description_content_type = text/x-rst

project-urls =
    Source = https://github.com/cta-observatory/pyeventio
    Tracker = https://github.com/cta-observatory/pyeventio/issues
    Download = https://pypi.org/project/eventio/#files
	Conda-Forge = https://anaconda.org/conda-forge/eventio

classifiersr = 
	Development Status :: 5 - Production/Stable
	Intended Audience :: Science/Research
	License :: OSI Approved :: MIT License
	Natural Language :: English
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3 :: Only
	Topic :: Scientific/Engineering :: Astronomy
	Topic :: Scientific/Engineering :: Physics

[aliases]
test=pytest

[tool:pytest]
addopts = -v --durations=10
